--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
                 <h1>Design Your House</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                    <br> Id magnam tempore architecto ducimus!</p>
-                <a href="#" type="button" class="cta-btn">watch more</a>
-                <a href="#" type="button" class="cta-btn">subscribe</a>
+                <div class="btn">
+                    <a href="#" type="button" class="btn1">watch more</a>
+                    <a href="#" type="button" class="btn2">subscribe</a>
+                </div>
             </div>
         </div>
     </section>
