--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 </div>
                 <div class="nav-list">
                     <nav>
-                        <a href="#">HOME</a>
-                        <a href="#">BEDROOM</a>
-                        <a href="#">DINING</a>
-                        <a href="#">KITCHEN</a>
+                        <a href="#">HOME</a> |
+                        <a href="#">BEDROOM</a> |
+                        <a href="#">DINING</a> |
+                        <a href="#">KITCHEN</a> |
                         <a href="#">BACKYARD</a>
                     </nav>
                 </div>
